--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </main>
 
     <!-- Footer Buttons -->
-    <a href="https://github.com/atodev" target="_blank" id="developer-btn">Developer</a>
+    <a href="https://buymeacoffee.com/zigxag" target="_blank" id="developer-btn">Donate</a>
     <button id="donate-btn" onclick="openDonatePopup()">Support Recovery</button>
 
     <!-- Donate Popup -->
